Fix height on mobile.1

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15px;
   height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
   display: grid;
   /* For mobile make a media query, calculate the height and adjust the rows */
   grid-template-rows: auto 34px;
@@ -109,6 +108,6 @@ hr {
 @media only screen and (max-width: 390px) {
   html,
   body {
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
   }
 }
